src/objects/Territory__c.object
<CustomObject>
    <description>Takes the Territory name as input</description>
    <fields>
        <fullName>Is_HomeOffice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays Is HomeOffice Or not</description>
        <label>Is HomeOffice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows that this is region or not</description>
        <label>Is Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Territories</relationshipLabel>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Territory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>